see #1008, #1073, revised session message